# skyull

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
anstream/: all.html  enum.ColorChoice.html  fn.force_color.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  sidebar-items.js  struct.AutoStream.html  struct.Buffer.html  struct.StripStream.html  trait.Lockable.html  trait.RawStream.html
anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  struct.Style.html
anstyle_parse/: all.html  index.html  struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html  trait.CharAccumulator.html  trait.Perform.html  type.DefaultCharAccumulator.html
clap/: enum.ArgAction.html  enum.ColorChoice.html  enum.ValueHint.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Command.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_builder/: all.html  enum.ArgAction.html  (+18 more)
template/: .env  .gitignore  Cargo.toml
template/src/: main.rs
template/src/adapters/database/: connection.rs  mod.rs  repositories.rs
template/src/adapters/database/memory/product_repository/: memory_product_repository.rs  mod.rs
template/src/adapters/database/mocked/product_repository/: data_product.json  mocked_repository_impl.rs  mod.rs
template/src/domain/: mod.rs  repositories.rs  repositories_trait.rs
template/src/domain/entities/: mod.rs  some_entity.rs
template/src/domain/product/model/: mod.rs  product_model.rs
template/src/domain/product/repository/: mod.rs  product_repository.rs
template/src/domain/traits/: base_traits_entities.rs  mod.rs  repository.rs
template/src/domain/user/model/: user_model.rs
template/src/domain/user/repository/: user_repository.rs
template/src/infra/: mod.rs
template/src/infra/providers/crypt/: crypt.rs  crypt_trait.rs  mod.rs
template/src/infra/repositories/: mocked_some_entity.json  mod.rs  some_entity_repo.rs  some_entity_repo_mock.rs
template/tests/integration/: api.test.rs
(+1204 files in other folders)
