[package]
name = "skyull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
indicatif = "0.17.3"
owo-colors = "3.5.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0"  

[[bin]]
name = "skyull"
path = "src/main.rs"