[package]
name = "skyull"
version = "1.0.0"
edition = "2021"
authors = ["lnxdxtf <grmichaliszen.dev@gmail.com>"]
rust-version = "1.67.0"
description = "SKYULL is a command-line interface (CLI) in development that creates REST API project structure templates with the aim of making it easy and fast to start a new project. With just a few primary configurations, such as project name, you can get started quickly."
documentation = "https://lnxdxtf.github.io/skyull/skyull/"
readme = "README.md"
repository = "https://github.com/lnxdxtf/skyull"
license = "MIT"
keywords = ["cli", "templates", "api", "rocket-template", "actix-template"]
categories = ["command-line-utilities", "command-line-interface", "config", "filesystem", "web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
indicatif = "0.17.3"
owo-colors = "3.5.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0"  

[[bin]]
name = "skyull"
path = "src/main.rs"
