[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.19.0"
rocket = "=0.5.0-rc.3"
async-trait = "0.1.68"
serde = "1.0.160"
serde_json = "1.0.96"
redis = "0.23.0"
anyhow = "1.0.70"
dotenv = "0.15.0"
