[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
dotenv = "0.15.0"
thiserror = "1.0.40"
tokio = {version="1.27.0", features=["rt", "macros"]}
bcrypt = "0.14.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",          
    "fast-rng",
    "macro-diagnostics",
    "serde",
]
